# pkgbuild-hooks

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
pkgbuild_hooks/: srcinfo_fixer.py  verify_srcinfo_checksums.py
