[metadata]
name = pkgbuild-hooks
version = 0.0.0
author = Eric Langlois
author_email = eric@langlois.xyz
description = "Pre-commit hooks for PKGBUILD files"
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
classifiers =
	Programming Language :: Python :: 3
	Operating System :: OS Independent
	License :: OSI Approved :: MIT License

[options]
packages = find:
